--- a/SimpleMess/package.json
+++ b/SimpleMess/package.json
@@ -11,6 +11,7 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-navigation": "^3.12.1"
   },
   "devDependencies": {
