--- a/SimpleMess/ios/Podfile
+++ b/SimpleMess/ios/Podfile
@@ -29,6 +29,8 @@ target 'SimpleMess' do
 
   pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'SimpleMessTests' do
     inherit! :search_paths
     # Pods for testing
