--- a/SimpleMess/package.json
+++ b/SimpleMess/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.12.1"
   },
   "devDependencies": {
